CREATE TABLE public.app_user (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    avatar_content_type varchar(255),
    avatar_image bytea,
    bio varchar(300),
    password varchar(255) NOT NULL,
    role varchar(255) NOT NULL,
    username varchar(255) NOT NULL,
    CONSTRAINT app_user_pkey PRIMARY KEY (id),
    CONSTRAINT uk3k4cplvh82srueuttfkwnylq0 UNIQUE (username)
);

CREATE TABLE public.artist (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(150) NOT NULL,
    CONSTRAINT artist_pkey PRIMARY KEY (id),
    CONSTRAINT uk_artist_name UNIQUE (name)
);

CREATE TABLE public.genre (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(80) NOT NULL,
    CONSTRAINT genre_pkey PRIMARY KEY (id),
    CONSTRAINT uk_genre_name UNIQUE (name)
);

CREATE TABLE public.music_wall (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(100) NOT NULL,
    wall_color varchar(7),
    wallpaper varchar(20),
    owner_id bigint NOT NULL,
    CONSTRAINT music_wall_pkey PRIMARY KEY (id),
    CONSTRAINT fk4v9ryrcu2jq33soqkon4ce8y5 FOREIGN KEY (owner_id) REFERENCES public.app_user(id)
);

CREATE TABLE public.wall_members (
    wall_id bigint NOT NULL,
    user_id bigint NOT NULL,
    CONSTRAINT wall_members_pkey PRIMARY KEY (wall_id, user_id),
    CONSTRAINT fkanjlpxh3woomkmjv56avw9qcf FOREIGN KEY (user_id) REFERENCES public.app_user(id),
    CONSTRAINT fktbu4udnko8pjm1fj05ys5nqec FOREIGN KEY (wall_id) REFERENCES public.music_wall(id)
);

CREATE TABLE public.music_section (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(80) NOT NULL,
    note_color varchar(20),
    wall_id bigint NOT NULL,
    CONSTRAINT music_section_pkey PRIMARY KEY (id),
    CONSTRAINT fkh0jyhi45mj23y0erkghc80u16 FOREIGN KEY (wall_id) REFERENCES public.music_wall(id)
);

CREATE TABLE public.album (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    cover_url varchar(500),
    release_year integer,
    title varchar(180) NOT NULL,
    artist_id bigint NOT NULL,
    CONSTRAINT album_pkey PRIMARY KEY (id),
    CONSTRAINT uk_album_artist_title UNIQUE (artist_id, title),
    CONSTRAINT fkmwc4fyyxb6tfi0qba26gcf8s1 FOREIGN KEY (artist_id) REFERENCES public.artist(id)
);

CREATE TABLE public.track (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    duration_seconds integer,
    title varchar(180) NOT NULL,
    album_id bigint,
    artist_id bigint NOT NULL,
    CONSTRAINT track_pkey PRIMARY KEY (id),
    CONSTRAINT fkaxm9pbgk7ptorfyk3o6911q05 FOREIGN KEY (album_id) REFERENCES public.album(id),
    CONSTRAINT fki28jadqiuqk1dlxtl0me7hqh2 FOREIGN KEY (artist_id) REFERENCES public.artist(id)
);

CREATE TABLE public.album_genre (
    album_id bigint NOT NULL,
    genre_id bigint NOT NULL,
    CONSTRAINT uk_album_genre PRIMARY KEY (album_id, genre_id),
    CONSTRAINT fkgobybiodeygwcmlhr7sxv4y01 FOREIGN KEY (album_id) REFERENCES public.album(id),
    CONSTRAINT fkld60pu9t8ff70bc6nrnnv91lx FOREIGN KEY (genre_id) REFERENCES public.genre(id)
);

CREATE TABLE public.track_genre (
    track_id bigint NOT NULL,
    genre_id bigint NOT NULL,
    CONSTRAINT track_genre_pkey PRIMARY KEY (track_id, genre_id),
    CONSTRAINT fk7fk536dvv5u9jobhp0wtcbfal FOREIGN KEY (genre_id) REFERENCES public.genre(id),
    CONSTRAINT fkboa4jxp2d7bagmrurr3m063pw FOREIGN KEY (track_id) REFERENCES public.track(id)
);

CREATE TABLE public.music_item (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    artist varchar(150) NOT NULL,
    item_type varchar(255) NOT NULL,
    status varchar(255) NOT NULL,
    title varchar(180) NOT NULL,
    catalog_album_id bigint,
    catalog_track_id bigint,
    section_id bigint NOT NULL,
    CONSTRAINT music_item_pkey PRIMARY KEY (id),
    CONSTRAINT fk5quiikbjj8k51klrs9oaefixr FOREIGN KEY (catalog_album_id) REFERENCES public.album(id),
    CONSTRAINT fkio5mkbtu0up4lujn1378au98j FOREIGN KEY (section_id) REFERENCES public.music_section(id),
    CONSTRAINT fkmmqacjaup944dqe3wuw85u4m8 FOREIGN KEY (catalog_track_id) REFERENCES public.track(id)
);
